# kojumi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: beta_tester.md
apps_script/: appsscript.json  kojumi_application_form.gs
beta1_api/: .env.example  package-lock.json  package.json  tsconfig.json
beta1_api/prisma/: schema.prisma
beta1_api/src/: SKILL.md  auth.ts  cleanup.ts  index.ts  logger.ts  manage_api_keys.ts  ops_cli.ts  routes.ts  scoring.ts  seed_benchmarks.ts  swagger.yaml
beta1_api/tests/: api.test.ts  auth.test.ts  scoring.test.ts
beta1_ui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
beta1_ui/public/docs_content/: api_guide.md  beta1_api_spec.md  evaluation_sdks_guide.md  index.md  openclaw_agent_quickstart.md
beta1_ui/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  i18n.ts  index.css  setupTests.ts
docs/: api_guide.md  architecture.md  beta1_api_spec.md  beta1_architecture.md  concept.md  evaluation_sdks_guide.md  getting_started.md  index.md  quickstart.md  sdk_installation.md
docs/launch/: beta_tester_call.md  demo_video_script.md  metrics.md  outreach_templates.md  x_followup_posts.md
docs/operations/: kojumi_application_form.md
examples/: README.md
mcp_servers/kojumi_eval_mcp/: README.md  mcp_server.py  requirements.txt
scripts/: evaluator_daemon.py  evidence_uploader.py  requirements.txt  simulate_agent_worker.py
sdks/python/: setup.py
sdks/rust/kojumi-eval-sdk/: Cargo.toml
sdks/rust/kojumi-eval-sdk/src/: lib.rs
(+35 files in other folders)
