[package]
name = "kojumi-eval-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
